added first project

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="title">Student Web Developer</span>
             <h1>Hello, I'm <span>Nicholas Do</span></h1>
             <p>I am a full-flex developer student, photographer, and graphic designer.</p>
-            <a href="#about" class="btn">About Me</a>
+            <a href="#about-link" class="btn">About Me</a>
         </section> 
 <!--End of Hero Splash-->
     </header>
@@ -82,9 +82,9 @@
                     <h1>MY WORK</h1>
                     
                         <div class="web-app">
-                            <img src="./assets/image/webapp.jpg" alt="Webpage of Current Portfolio" width="840" height="400" class="web-picture" />
+                            <img src="./assets/image/screenshot.png" alt="Webpage of Current Portfolio" width="840" height="400" class="web-picture" />
                             <div class="middle-button">
-                                <button class="text"> Web Applications</button>
+                                <button class="text"><a class="weblink" href="https://hieuwy.github.io/project-1/">Anination</a></button>
                             </div>
                         </div>
                 </div>
@@ -94,12 +94,16 @@
     </main>
 <!--End of Main Content Section-->
 
-<!--Contact Form-->
+<!--Contact Form Section-->
+
     <article id="contact-link">
         <div class="contact">
             <h1>CONTACT</h1>
             <div class="contact-box">
                 <div class="contact-left">
+
+                    <!-- Contact Form Box-->
+
                     <h3>Contact Me</h3>
                     <p>If you have any requests or questions, fill out this form below and I will reach you shortly!</p>
                     <form>
@@ -155,6 +159,8 @@
                         </tr>
                     </table>
                 </div>
+
+                <!-- End of Contact Box Content -->
             </div>    
         </div>
     </article>
