Added Project 2 to Portfolio

--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
                                 <button class="text"><a class="weblink" href="https://hieuwy.github.io/project-1/">Anination</a></button>
                             </div>
                         </div>
+                        <div class="web-app">
+                            <img src="./assets/image/work2.png" alt="Webpage of Current Portfolio" width="840" height="400" class="web-picture" />
+                            <div class="middle-button">
+                                <button class="text"><a class="weblink" href="https://peace-of-mind-app.herokuapp.com/">PEACE OF MIND</a></button>
+                            </div>
+                        </div>
                 </div>
             </article>
         </section>
